libs/extractor/src/snapshots/extractor__tests__emotion_cx_takes_class_names.snap
---
source: libs/extractor/src/lib.rs
expression: "emotion_class_call(r\"const red = css({ color: 'red' });\nexport const a = cx('external');\nexport const b = cx(red, 'external', { picked: true });\nexport const c = cx(red, false && 'x');\nexport const d = (on, k, cls, props) => cx(cls, { on, [k]: on, 'a b': props.x, off: false, 1: on, [`t`]: on }, [on && 'x', [cls]], on ? { y: 1 } : null, on || cls, cls ?? 'z', 0, 5, null, undefined, `t ${cls} u`, `glued${cls}`, props.make(), (on as boolean) && 'w', false || 'v');\nexport const e = cx();\nexport const f = cx([, 'a'], ['  b   c  ']);\nexport const g = (on) => cx(on ? { a: on } : [on && 'b'], on ? (on ? 'c' : 'd') : 'e');\nexport const h = (on) => cx({ [on.key]: on.value });\nexport const i = () => cx(red, `${red} x`);\nexport const j = cx({ a: null, b: 'x', c: '', d: 0, e: undefined, f: 2, g: false, h: true });\")"
---
Ok(
    "import \"@devup-ui/react/devup-ui-0.css\";\nconst red = \"a-a\";\nexport const a = \"external\";\nexport const b = \"a-a external picked\";\nexport const c = \"a-a\";\nexport const d = (on, k, cls, props) => `5 t u v ${cls || \"\"} ${on ? \"on\" : \"\"} ${on ? `${k}` : \"\"} ${props.x ? \"a b\" : \"\"} ${on ? \"1\" : \"\"} ${on ? \"t\" : \"\"} ${on ? \"x\" : \"\"} ${cls || \"\"} ${on ? \"y\" : \"\"} ${on || `${cls || \"\"}` || \"\"} ${(cls ?? \"z\") || \"\"} ${cls || \"\"} glued${cls} ${props.make() || \"\"} ${(on as boolean) ? \"w\" : \"\"}`;\nexport const e = \"\";\nexport const f = \"a b c\";\nexport const g = (on) => `${on ? `${on ? \"a\" : \"\"}` : `${on ? \"b\" : \"\"}`} ${on ? `${on ? \"c\" : \"d\"}` : \"e\"}`;\nexport const h = (on) => on.value ? `${on.key}` : \"\";\nexport const i = () => \"a-a a-a x\";\nexport const j = \"b f h\";\n",
)
