libs/extractor/src/snapshots/extractor__tests__emotion_rules_read_local_constants_as_pixels.snap
---
source: libs/extractor/src/lib.rs
expression: "library_outputs(&[\"import { css } from '@emotion/react';\\nconst gap = 8;\\nconst ZERO = 0;\\nconst LINE = 2;\\nexport const a = css({ padding: gap, margin: ZERO, lineHeight: LINE, opacity: LINE, p: gap, mx: gap });\",\n\"import { css } from '@emotion/react';\\nconst gap = 8;\\nexport const a = css({ '&:hover': { top: -gap, left: gap * 2 }, width: gap > 4 ? gap : 1, height: gap || 3, minWidth: (gap) });\",\n\"import { css } from '@emotion/react';\\nconst gap = 8;\\nconst rules = { padding: gap, lineHeight: 2, vars: { margin: 3 } };\\nconst nested = { '&:hover': rules };\\nexport const a = css(rules);\\nexport const b = css({ ...rules, margin: 1 });\\nexport const c = css({ '&:focus': rules });\\nexport const d = css(nested);\",\n\"import { css } from '@emotion/react';\\nconst gap = 8;\\nconst label = 'a';\\nexport const a = css({ padding: gap, content: label, margin: label });\",\n\"import styled from '@emotion/styled';\\nconst gap = 8;\\nexport const A = styled.div({ margin: gap, flex: gap, zIndex: gap });\\nexport const B = styled('div')({ margin: gap });\",\n\"import styled, { css } from 'styled-components';\\nconst gap = 8;\\nexport const A = styled.div({ margin: gap });\\nexport const B = css({ margin: gap });\",\n\"import { Global } from '@emotion/react';\\nconst gap = 8;\\nexport const App = () => <Global styles={{ body: { margin: gap, lineHeight: 2 } }} />;\",\n\"import { ClassNames } from '@emotion/react';\\nconst gap = 8;\\nexport const App = () => <ClassNames>{({ css }) => <a className={css({ margin: gap })} />}</ClassNames>;\",\n\"import { style } from '@vanilla-extract/css';\\nconst gap = 8;\\nexport const a = style({ margin: gap, lineHeight: gap, vars: { x: gap } });\",\n\"import { css } from '@emotion/react';\\nconst gap = 8;\\nexport const App = () => <div css={{ margin: gap }} />;\",\n\"import { css } from '@devup-ui/react';\\nconst gap = 8;\\nexport const a = css({ padding: gap, margin: 8 });\",\n\"import { css } from '@emotion/react';\\nexport const a = css({ padding: unknown, margin: 8 });\",],\nSIZE_MODULES)"
---
[
    (
        "import { css } from '@emotion/react';\nconst gap = 8;\nconst ZERO = 0;\nconst LINE = 2;\nexport const a = css({ padding: gap, margin: ZERO, lineHeight: LINE, opacity: LINE, p: gap, mx: gap });",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"line-height\", value: \"2\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin\", value: \"0\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin-left\", value: \"32px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin-right\", value: \"32px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"opacity\", value: \"2\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"padding\", value: \"32px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"padding\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nconst gap = 8;\\nconst ZERO = 0;\\nconst LINE = 2;\\nexport const a = \\\"a b c d e f g\\\";\\n\" }",
    ),
    (
        "import { css } from '@emotion/react';\nconst gap = 8;\nexport const a = css({ '&:hover': { top: -gap, left: gap * 2 }, width: gap > 4 ? gap : 1, height: gap || 3, minWidth: (gap) });",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"height\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"left\", value: \"16px\", level: 0, selector: Some(Selector(\"&:hover\")), style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"min-width\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"top\", value: \"-8px\", level: 0, selector: Some(Selector(\"&:hover\")), style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"width\", value: \"1px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"width\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nconst gap = 8;\\nexport const a = `a b e f ${8 > 4 ? \\\"c\\\" : \\\"d\\\"}`;\\n\" }",
    ),
    (
        "import { css } from '@emotion/react';\nconst gap = 8;\nconst rules = { padding: gap, lineHeight: 2, vars: { margin: 3 } };\nconst nested = { '&:hover': rules };\nexport const a = css(rules);\nexport const b = css({ ...rules, margin: 1 });\nexport const c = css({ '&:focus': rules });\nexport const d = css(nested);",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"line-height\", value: \"2\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"line-height\", value: \"2\", level: 0, selector: Some(Selector(\"&:hover\")), style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"line-height\", value: \"2\", level: 0, selector: Some(Selector(\"&:focus\")), style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin\", value: \"12px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin\", value: \"12px\", level: 0, selector: Some(Selector(\"&:hover\")), style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin\", value: \"12px\", level: 0, selector: Some(Selector(\"&:focus\")), style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin\", value: \"1px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"padding\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"padding\", value: \"8px\", level: 0, selector: Some(Selector(\"&:hover\")), style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"padding\", value: \"8px\", level: 0, selector: Some(Selector(\"&:focus\")), style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nconst gap = 8;\\nconst rules = {\\n\\tpadding: gap,\\n\\tlineHeight: 2,\\n\\tvars: { margin: 3 }\\n};\\nconst nested = { \\\"&:hover\\\": rules };\\nexport const a = \\\"a b c\\\";\\nexport const b = \\\"a b c d\\\";\\nexport const c = \\\"e f g\\\";\\nexport const d = \\\"h i j\\\";\\n\" }",
    ),
    (
        "import { css } from '@emotion/react';\nconst gap = 8;\nconst label = 'a';\nexport const a = css({ padding: gap, content: label, margin: label });",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"content\", value: \"a\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin\", value: \"a\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"padding\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nconst gap = 8;\\nconst label = \\\"a\\\";\\nexport const a = \\\"a b c\\\";\\n\" }",
    ),
    (
        "import styled from '@emotion/styled';\nconst gap = 8;\nexport const A = styled.div({ margin: gap, flex: gap, zIndex: gap });\nexport const B = styled('div')({ margin: gap });",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"flex\", value: \"8\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"z-index\", value: \"8\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nimport { forwardRef as __devupForwardRef } from \\\"react\\\";\\nconst gap = 8;\\nexport const A = __devupForwardRef((__devupRefProps, __devupRef) => (({ style, className, as: DevupAs = \\\"div\\\", forwardedAs, ...rest }) => <DevupAs {...(({ \\\"theme\\\": __devupOmit0, ...__devupDom }) => __devupDom)(rest)} as={forwardedAs} className={[\\\"a--a a b c\\\", className].filter(Boolean).join(\\\" \\\")} style={style} />)({\\n\\t...__devupRefProps,\\n\\tref: __devupRef\\n}));\\nexport const B = __devupForwardRef((__devupRefProps, __devupRef) => (({ style, className, as: DevupAs = \\\"div\\\", forwardedAs, ...rest }) => <DevupAs {...(({ \\\"theme\\\": __devupOmit0, ...__devupDom }) => __devupDom)(rest)} as={forwardedAs} className={[\\\"a--b a\\\", className].filter(Boolean).join(\\\" \\\")} style={style} />)({\\n\\t...__devupRefProps,\\n\\tref: __devupRef\\n}));\\n\" }",
    ),
    (
        "import styled, { css } from 'styled-components';\nconst gap = 8;\nexport const A = styled.div({ margin: gap });\nexport const B = css({ margin: gap });",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"margin\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nimport { forwardRef as __devupForwardRef } from \\\"react\\\";\\nconst gap = 8;\\nexport const A = __devupForwardRef((__devupRefProps, __devupRef) => (({ style, className, as: DevupAs = \\\"div\\\", forwardedAs, ...rest }) => <DevupAs {...(({ \\\"theme\\\": __devupOmit0, ...__devupDom }) => __devupDom)(rest)} as={forwardedAs} className={[\\\"a--a a\\\", className].filter(Boolean).join(\\\" \\\")} style={style} />)({\\n\\t...__devupRefProps,\\n\\tref: __devupRef\\n}));\\nexport const B = \\\"a\\\";\\n\" }",
    ),
    (
        "import { Global } from '@emotion/react';\nconst gap = 8;\nexport const App = () => <Global styles={{ body: { margin: gap, lineHeight: 2 } }} />;",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"line-height\", value: \"2\", level: 0, selector: Some(Global(\"body\", \"/src/App.tsx\")), style_order: Some(0), layer: None }), Static(ExtractStaticStyle { property: \"margin\", value: \"8px\", level: 0, selector: Some(Global(\"body\", \"/src/App.tsx\")), style_order: Some(0), layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nimport { Global } from \\\"@devup-ui/react/compat\\\";\\nconst gap = 8;\\nexport const App = () => <Global />;\\n\" }",
    ),
    (
        "import { ClassNames } from '@emotion/react';\nconst gap = 8;\nexport const App = () => <ClassNames>{({ css }) => <a className={css({ margin: gap })} />}</ClassNames>;",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"margin\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nconst gap = 8;\\nexport const App = () => <a className={\\\"a\\\"} />;\\n\" }",
    ),
    (
        "import { style } from '@vanilla-extract/css';\nconst gap = 8;\nexport const a = style({ margin: gap, lineHeight: gap, vars: { x: gap } });",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"line-height\", value: \"8\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"margin\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"x\", value: \"32px\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nconst gap = 8;\\nexport const a = \\\"a b c\\\";\\n\" }",
    ),
    (
        "import { css } from '@emotion/react';\nconst gap = 8;\nexport const App = () => <div css={{ margin: gap }} />;",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"margin\", value: \"8px\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nconst gap = 8;\\nexport const App = () => <div className=\\\"a\\\" />;\\n\" }",
    ),
    (
        "import { css } from '@devup-ui/react';\nconst gap = 8;\nexport const a = css({ padding: gap, margin: 8 });",
        "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"margin\", value: \"32px\", level: 0, selector: None, style_order: None, layer: None }), Static(ExtractStaticStyle { property: \"padding\", value: \"32px\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nconst gap = 8;\\nexport const a = \\\"a b\\\";\\n\" }",
    ),
    (
        "import { css } from '@emotion/react';\nexport const a = css({ padding: unknown, margin: 8 });",
        "Error: /src/App.tsx:2:18: `css()` cannot use `unknown` at build time: its values must be literals, theme tokens or constants, or be computed from them",
    ),
]
